Refactor groups. Add courses
